--- a/architectureweb/pom.xml
+++ b/architectureweb/pom.xml
@@ -44,6 +44,25 @@
             <version>1.0-SNAPSHOT</version>
             <type>war</type>
         </dependency>
+        <dependency>
+            <groupId>com.shushiyi</groupId>
+            <artifactId>ordermgr</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>war</type>
+        </dependency>
+        <dependency>
+            <groupId>com.shushiyi</groupId>
+            <artifactId>storemgr</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>war</type>
+        </dependency>
+        <dependency>
+            <groupId>com.shushiyi</groupId>
+            <artifactId>cartmgr</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>war</type>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -84,7 +103,20 @@
                                 <groupId>com.shushiyi</groupId>
                                 <artifactId>goodsmgrweb</artifactId>
                             </overlay>
+                            <overlay>
+                                <groupId>com.shushiyi</groupId>
+                                <artifactId>cartmgr</artifactId>
+                            </overlay>
+                            <overlay>
+                                <groupId>com.shushiyi</groupId>
+                                <artifactId>ordermgr</artifactId>
+                            </overlay>
+                            <overlay>
+                                <groupId>com.shushiyi</groupId>
+                                <artifactId>storemgr</artifactId>
+                            </overlay>
                         </overlays>
+
 
                     </configuration>
                 </plugin>
