--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,9 @@
         <module>customermgr</module>
         <module>goodsmgr</module>
         <module>goodsmgrweb</module>
+        <module>cartmgr</module>
+        <module>ordermgr</module>
+        <module>storemgr</module>
     </modules>
     <packaging>pom</packaging>
 
