--- a/goodsmgrweb/pom.xml
+++ b/goodsmgrweb/pom.xml
@@ -22,14 +22,6 @@
         <maven.compiler.target>1.7</maven.compiler.target>
     </properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
 
     <build>
         <finalName>goodsmgrweb</finalName>
@@ -63,6 +55,19 @@
                 <plugin>
                     <artifactId>maven-deploy-plugin</artifactId>
                     <version>2.8.2</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.tomcat.maven</groupId>
+                    <artifactId>tomcat7-maven-plugin</artifactId>
+                    <version>2.2</version>
+                    <configuration>
+                        <!--端口号 -->
+                        <port>8090</port>
+                        <!--项目访问的根目录
+                        url:localhost:8090/项目名称/addUser.action
+                        -->
+                        <path>/goodsweb</path>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
