--- a/storemgr/pom.xml
+++ b/storemgr/pom.xml
@@ -21,16 +21,6 @@
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
     </properties>
-
-    <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
-
     <build>
         <finalName>storemgr</finalName>
         <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
@@ -63,6 +53,19 @@
                 <plugin>
                     <artifactId>maven-deploy-plugin</artifactId>
                     <version>2.8.2</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.tomcat.maven</groupId>
+                    <artifactId>tomcat7-maven-plugin</artifactId>
+                    <version>2.2</version>
+                    <configuration>
+                        <!--端口号 -->
+                        <port>8090</port>
+                        <!--项目访问的根目录
+                        url:localhost:8090/项目名称/addUser.action
+                        -->
+                        <path>/store</path>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
